[project]
name = "amnezia-ip-list-converter"
version = "1.0.0"
description = "Convert JSON with IP ranges into Amnezia ip-list JSON format."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Alexander Kostrikin" }
]

[project.scripts]
amnezia-ip-convert = "amnezia_ip_convert:main"

